# DE-capstone-project

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Makefile  README.md  generate_roadmap_pdf.py  pyproject.toml
libs/common/: pyproject.toml
libs/common/schemas/avro/: agent_action.avsc  market_stats.avsc  order_cancelled.avsc  order_placed.avsc  orderbook_snapshot.avsc  quote_update.avsc  trade_executed.avsc  trading_halt.avsc  trading_resume.avsc
libs/common/src/de_common/: __init__.py
libs/common/src/de_common/models/: __init__.py  agent_action.py  enums.py  events.py  market_stats.py  order.py  orderbook.py  quote.py  trade.py  trading_halt.py
services/dagster-orchestrator/: Dockerfile  dagster.yaml  pyproject.toml  workspace.yaml
services/dagster-orchestrator/orchestrator/: __init__.py  definitions.py
services/dagster-orchestrator/orchestrator/assets/: __init__.py  bronze.py  dimensions.py  gold.py  maintenance.py  quality_checks.py  silver.py
services/dagster-orchestrator/orchestrator/assets/governance/: masked_tables.py  pii_retention.py
services/dagster-orchestrator/orchestrator/hooks/: __init__.py  alerting.py  metrics_hook.py  quality_hooks.py
services/dagster-orchestrator/orchestrator/jobs/: __init__.py  data_quality.py  export.py  maintenance.py
services/dagster-orchestrator/orchestrator/metrics/: __init__.py  dagster_metrics.py
services/dagster-orchestrator/orchestrator/partitions/: __init__.py  daily.py
services/dagster-orchestrator/orchestrator/resources/: __init__.py  duckdb_resource.py  gx_resource.py  iceberg.py  kafka.py  prometheus.py
services/dagster-orchestrator/orchestrator/schedules/: __init__.py  daily.py  monthly.py  weekly.py
services/dagster-orchestrator/orchestrator/sensors/: __init__.py  freshness_sensor.py  kafka_sensor.py  prometheus_metrics_sensor.py  run_status_sensor.py
services/dagster-orchestrator/orchestrator/utils/: __init__.py  iceberg_helpers.py  kafka_helpers.py
services/dagster-orchestrator/tests/: conftest.py  test_bronze_assets.py  test_data_quality_job.py  test_dimension_assets.py  test_freshness_sensor.py  test_gold_assets.py  test_governance_assets.py  test_jobs.py  test_quality_checks.py  test_resources.py  test_schedules.py  test_sensors.py  test_silver_assets.py
services/dagster-orchestrator/tests/test_metrics/: test_dagster_metrics.py  test_prometheus_metrics_sensor.py
services/data-quality/: pyproject.toml
services/data-quality/data_quality/: __init__.py  runner.py  scoring.py
services/data-quality/data_quality/custom_expectations/: __init__.py  expect_ohlcv_consistency.py
services/data-quality/data_quality/suites/: __init__.py  bronze_suite.py  gold_suite.py  silver_suite.py
services/data-quality/tests/: conftest.py  test_bronze_suite.py  test_custom_expectations.py  test_gold_suite.py  test_scoring.py  test_silver_suite.py
services/flink-processor/: Dockerfile  pyproject.toml
services/flink-processor/data/reference/: symbols.json
services/flink-processor/src/flink_processor/: config.py  submit_python_pipeline.py  submit_sql_pipeline.py
services/flink-processor/src/flink_processor/sql/: ddl.py  (+1 more)
services/flink-processor/tests/: conftest.py  test_config.py  test_orderbook_analyzer.py  test_price_alert_detector.py
services/graphql-api/: Dockerfile  pyproject.toml
services/graphql-api/app/: config.py  context.py  main.py  metrics.py
services/graphql-api/app/auth/: models.py  permissions.py
services/graphql-api/app/cache/: memory_cache.py
services/graphql-api/app/db/: iceberg_duckdb.py
services/graphql-api/app/extensions/: depth_limiter.py  metrics_extension.py
services/graphql-api/app/governance/: masking.py
services/graphql-api/app/loaders/: symbol_loader.py
services/graphql-api/app/middleware/: auth.py  cls_middleware.py  rls_middleware.py
services/graphql-api/app/resolvers/: daily_summary.py  market_overview.py  minute_candles.py  order_book.py  symbol.py  trade.py
services/graphql-api/app/schema/: __init__.py  inputs.py  mutation.py  pagination.py  query.py  subscription.py  types.py
services/graphql-api/app/services/: watchlist_service.py
services/graphql-api/app/streaming/: kafka_consumer.py
services/graphql-api/tests/: conftest.py
services/graphql-api/tests/test_metrics/: test_metrics_extension.py  test_metrics_module.py
services/graphql-api/tests/test_middleware/: test_auth.py  test_cache.py  test_cls_middleware.py  test_governance_masking.py  test_pii_access_logger.py  test_rls_middleware.py
services/graphql-api/tests/test_resolvers/: test_summary_resolver.py  test_symbol_resolver.py  test_trade_resolver.py
services/graphql-api/tests/test_schema/: test_integration.py  test_pagination.py  test_types.py
services/kafka-bridge/: Dockerfile  pyproject.toml
services/kafka-bridge/src/kafka_bridge/: __main__.py  bridge.py  kafka_producer.py  message_router.py  websocket_client.py
services/kafka-bridge/tests/: test_bridge.py  test_message_router.py  test_message_validator.py
services/lakehouse/: Dockerfile  pyproject.toml
services/lakehouse/scripts/: migrate_column_renames.py
services/lakehouse/src/lakehouse/: __init__.py  catalog.py  config.py
services/lakehouse/tests/: conftest.py  test_bronze_writer.py  test_gold_aggregator.py  test_scd_type2.py  test_schemas.py  test_silver_processor.py
(+194 files in other folders)
