[project]
name = "de-common"
version = "0.1.0"
description = "Shared models and schemas for DE Capstone Project"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
