[project]
name = "dagster-orchestrator"
version = "0.1.0"
description = "Dagster orchestration for DE capstone lakehouse pipeline"
requires-python = ">=3.11"

dependencies = [
    "dagster>=1.7,<2.0",
    "dagster-webserver>=1.7,<2.0",
    "dagster-postgres>=0.23,<1.0",
    "pyiceberg[s3fs]>=0.7,<1.0",
    "confluent-kafka>=2.3,<3.0",
    "pyarrow>=14.0,<18.0",
    "duckdb>=1.0,<2.0",
    "pandas>=2.0,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "great-expectations>=0.18.19,<0.19",
    "lakehouse",
    "data-quality",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "dagster-webserver>=1.7,<2.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
