[project]
name = "data-quality"
version = "0.1.0"
description = "Data quality validation using Great Expectations for DE capstone lakehouse"
requires-python = ">=3.11"

dependencies = [
    "great-expectations>=0.18.19,<0.19",
    "pandas>=2.0,<3.0",
    "pyarrow>=14.0,<18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data_quality*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
