[project]
name = "kafka-bridge"
version = "0.1.0"
description = "WebSocket-to-Kafka bridge for DE-Stock events"
requires-python = ">=3.11"

dependencies = [
    "websockets>=12.0,<14.0",
    "confluent-kafka[avro]>=2.3,<3.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "prometheus-client>=0.20,<1.0",
    "de-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
