[project]
name = "lakehouse"
version = "0.1.0"
description = "Iceberg lakehouse: Bronze/Silver/Gold medallion architecture"
requires-python = ">=3.11"

dependencies = [
    "pyiceberg[s3fs]>=0.7,<1.0",
    "confluent-kafka>=2.3,<3.0",
    "pyarrow>=14.0,<18.0",
    "duckdb>=1.0,<2.0",
    "pandas>=2.0,<3.0",
    "pydantic-settings>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
